# Sparrow2.0

./: CMakeLists.txt  README.md  Sparrow说明文档.docx  main.cpp
private/: Camera.cpp  Controller.cpp  Image.cpp  Light.cpp  Model.cpp  Pipeline.cpp  Sample.cpp  Scene.cpp  Shading.cpp  Win.cpp  struct.cpp  tools.cpp
public/: Camera.h  Controller.h  Image.h  Light.h  Model.h  Pipeline.h  Sample.h  Scene.h  Win.h  constant.h  struct.h  tools.h
shader/: shader.h
